# book_thing

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
backend/db/dyamo_db/: __init__.py  client.py
backend/db/redis/: redis_utils.py
backend/rest_api/: run_rest_api.py
backend/rest_api/routers/: health.py  redis_debug.py  tasks.py
backend/task_api/: __init__.py  celery_app.py
backend/task_api/tasks/: __init__.py  example.py
frontend/: Dockerfile  orval.config.ts  package-lock.json  package.json
frontend/src/api/: custom-fetch.ts  index.ts
frontend/src/api/endpoints/default/: default.ts
frontend/src/api/endpoints/health/: health.ts
frontend/src/api/endpoints/tasks/: tasks.ts
frontend/src/api/models/: celeryQueueInfo.ts  celeryTaskInfo.ts  hTTPValidationError.ts  index.ts  redisCeleryInfo.ts  redisClientsInfo.ts  redisKeyInfo.ts  redisKeysInfo.ts  redisMemoryInfo.ts  redisServerInfo.ts  redisStatus.ts  redisStatusCelery.ts  redisStatusClients.ts  redisStatusError.ts  redisStatusKeys.ts  redisStatusMemory.ts  redisStatusServer.ts  triggerHelloTaskTasksHelloPostParams.ts  validationError.ts  validationErrorLocItem.ts
frontend/src/app/debug/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: BackendTest.tsx
frontend/src/components/debug/: HealthCheck.tsx  TaskTrigger.tsx
frontend/src/components/debug/redis/: KeysList.tsx  RedisStatus.tsx  StatCard.tsx  StatusBadge.tsx  utils.ts
frontend/src/components/pages/: DebugPage.tsx
